obsidian.css
body {
  font-size: 16px;
  font-family: "Roboto", sans-serif;
  --font-monospace: "Fira Code", "Source Code Pro", monospace;
}

.CodeMirror pre.CodeMirror-line {
  font-size: 13px;
  font-family: "Fira Code", "Source Code Pro", monospace;
}

/* === DARK MODE === */

.theme-dark {
  --background-primary: #343434;
  --background-primary-alt: #171717;
  --background-secondary: #2c2c2c;
  --background-secondary-alt: #2c2c2c;
  --background-modifier-border: #303030;
  --background-modifier-box-shadow: rgba(0, 0, 0, 0.85);
  --text-accent: #df4a16;
  --text-accent-hover: #df7a16;
  --text-normal: #dcddde;
  --text-muted: #999;
  --text-faint: #666;
  --text-error: #ff3333;
  --text-error-hover: #990000;
  --text-matched: #dcddde;
  --text-on-accent: #dcddde;
  --text-selection: rgba(223, 74, 22, 0.8);
  --text-highlight-bg: #df4a16;
  --interactive-normal: #2a2a2a;
  --interactive-hover: #303030;
  --interactive-accent: #df4a16;
  --interactive-accent-rgb: #df7a16;
  --interactive-accent-hover: #df7a16;
  --workspace-leaf-resize: #494949;
  --scrollbar-active-thumb-bg: rgba(255, 255, 255, 0.2);
  --scrollbar-bg: rgba(255, 255, 255, 0);
  --scrollbar-thumb-bg: rgba(255, 255, 255, 0.1);
  --accent-strong: #ec0d0d;
  --accent-mild: #e6b64f;
  --bw: #ffffff;
  --lines-identation: #535353;
  --tooltip-bg: rgba(223, 74, 22, 0.9);
}

/* === LIGHT MODE === */

.theme-light {
  --background-primary: #fff;
  --background-primary-alt: #dedede;
  --background-secondary: #dedede;
  --background-secondary-alt: #dedede;
  --background-modifier-border: #f7f7f7;
  --background-modifier-box-shadow: rgba(0, 0, 0, 0.85);
  --text-accent: #df4a16;
  --text-accent-hover: #df7a16;
  --text-normal: #03050b;
  --text-muted: #555;
  --text-error: #ff3333;
  --text-error-hover: #990000;
  --text-matched: #dcddde;
  --text-on-accent: #dcddde;
  --text-selection: rgba(223, 74, 22, 0.8);
  --text-highlight-bg: #df4a16;
  --interactive-accent: #df4a16;
  --interactive-accent-rgb: #df7a16;
  --interactive-accent-hover: #df7a16;
  --workspace-leaf-resize: #c1c1c1;
  --accent-strong: #ec0d0d;
  --accent-mild: #e6b64f;
  --bw: #03050b;
  --lines-identation: #dad8d8;
  --tooltip-bg: rgba(223, 74, 22, 0.9);
}

/* change highlight h1 in text from outline panel or search */
/* because color the same */

.markdown-preview-view .mod-highlighted h1 {
  color: white;
}

/* === Tooltip === */
.tooltip {
  background-color: var(--tooltip-bg);
  color: #fff;
  font-weight: bold;
}

/* Make selected items in settings more visible */
.horizontal-tab-nav-item.is-active,
.vertical-tab-nav-item.is-active {
  background-color: var(--background-primary);
}
.horizontal-tab-nav-item:hover,
.vertical-tab-nav-item:hover {
  background-color: var(--background-primary);
  transition: all 0.3s ease;
}

/* Add border in settings page */
.modal.mod-settings .vertical-tab-header {
  border-right: 1px solid var(--background-primary);
}

/* fix local graph input range background */
input[type="range"] {
  background-color: var(--background-secondary);
}

/* === Header Counters === */
/* List styling (numbering) for outline pane */
/* Thanks Klaas */

body
  > div
  > div.horizontal-main-container
  > div
  > div.workspace-split.mod-horizontal.mod-right-split
  > div.workspace-tabs
  > div.workspace-leaf
  > div
  > div.view-content
  > div.outline {
  counter-reset: h1;
}

body
  > div
  > div.horizontal-main-container
  > div
  > div.workspace-split.mod-horizontal.mod-right-split
  > div.workspace-tabs
  > div.workspace-leaf
  > div
  > div.view-content
  > div.outline
  > div
  > div.pane-clickable-item {
  counter-reset: h2;
}

body
  > div
  > div.horizontal-main-container
  > div
  > div.workspace-split.mod-horizontal.mod-right-split
  > div.workspace-tabs
  > div.workspace-leaf
  > div
  > div.view-content
  > div.outline
  > div
  > div.outline-heading-children
  > div
  > div.pane-clickable-item {
  counter-reset: h3;
}

body
  > div
  > div.horizontal-main-container
  > div
  > div.workspace-split.mod-horizontal.mod-right-split
  > div.workspace-tabs
  > div.workspace-leaf
  > div
  > div.view-content
  > div.outline
  > div
  > div.outline-heading-children
  > div
  > div.outline-heading-children
  > div
  > div.pane-clickable-item {
  counter-reset: h4;
}

body
  > div
  > div.horizontal-main-container
  > div
  > div.workspace-split.mod-horizontal.mod-right-split
  > div.workspace-tabs
  > div.workspace-leaf
  > div
  > div.view-content
  > div.outline
  > div
  > div.outline-heading-children
  > div
  > div.outline-heading-children
  > div
  > div.outline-heading-children
  > div
  > div.pane-clickable-item {
  counter-reset: h5;
}

body
  > div
  > div.horizontal-main-container
  > div
  > div.workspace-split.mod-horizontal.mod-right-split
  > div.workspace-tabs
  > div.workspace-leaf
  > div
  > div.view-content
  > div.outline
  > div
  > div.outline-heading-children
  > div
  > div.outline-heading-children
  > div
  > div.outline-heading-children
  > div
  > div.outline-heading-children
  > div
  > div.pane-clickable-item {
  counter-reset: h6;
}

body
  > div
  > div.horizontal-main-container
  > div
  > div.workspace-split.mod-horizontal.mod-right-split
  > div.workspace-tabs
  > div.workspace-leaf
  > div
  > div.view-content
  > div.outline
  > div
  > div.pane-clickable-item:before {
  counter-increment: h1;
  content: counter(h1) ". ";
}

body
  > div
  > div.horizontal-main-container
  > div
  > div.workspace-split.mod-horizontal.mod-right-split
  > div.workspace-tabs
  > div.workspace-leaf
  > div
  > div.view-content
  > div.outline
  > div
  > div.outline-heading-children
  > div
  > div.pane-clickable-item:before {
  counter-increment: h2;
  content: counter(h1) "." counter(h2) ". ";
}
/* ... */

